# DeepAgents-Project1

./: .env.example  .gitignore  README.md  pyproject.toml
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: App.css  App.tsx  index.css
docs/: test-script-generator-implementation-plan.md
input/: test-cases.json
src/test_script_generator/: __init__.py  cli.py  config.py  graph.py  llm.py  schemas.py  web_api.py  web_server.py
src/test_script_generator/adapters/: api_evidence.py  db_evidence.py  filesystem.py  git_provider.py  github_publish.py  github_repo.py  manual_input.py  maven.py  playwright_codegen.py  pr_provider.py
src/test_script_generator/agents/: actionability.py  exploratory.py  planner.py  repair.py  reviewer.py  script_writer.py
src/test_script_generator/profiles/: base.py  java_bdd_maven.py  java_testng_maven.py
src/test_script_generator/reports/: json_report.py  markdown.py
tests/unit/: test_actionability.py  test_config.py  test_exploratory.py  test_github_publish.py  test_github_repo.py  test_graph.py  test_manual_input.py  test_script_writer.py  test_web_api.py
