[project]
name = "test-script-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chetangpande-ai", email = "chetangpande1@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "lxml>=6.1.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "tenacity>=9.1.4",
    "typer>=0.26.7",
    "uvicorn>=0.49.0",
]

[project.scripts]
test-script-generator = "test_script_generator:main"
test-script-generator-api = "test_script_generator.web_server:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]
